// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should have some hintText 1`] = `
<div
  class="block width_full"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative types_textarea_base input_itself_root_base"
        id="id"
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
  <p
    class="blockText textAlign_left root_base blockText fontWeight_normal_base sizes_2_base blockText 2_mobile_base 4_mobile_base hintText_base styleNode_base"
  >
    hint text
  </p>
</div>
`;

exports[`<TextAreaInput /> should match snapshot 1`] = `
<div
  class="block width_full"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative types_textarea_base input_itself_root_base"
        id="id"
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when active 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative types_textarea_base input_itself_root_base"
      >
        value from the tests
      </textarea>
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base activeBorderColour_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base activeBorderColour_base"
        style="width: 16px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base activeColour_base root_base block colours_neutral_base noWrap sizes_4_base placeholderPlacement_shifted_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base activeBorderColour_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when loading 1`] = `
<div
  class="block width_full"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <div
        class="block size_medium_circular_base colours_primary_base block position_absolute pointerEvents_none iconRoot_base icon_suffix styleNode_base"
      >
        <svg
          class="display_block overflow_hidden circular"
          viewBox="25 25 50 50"
        >
          <circle
            class="path_base size_medium_path_base"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke-miterlimit="10"
          />
        </svg>
      </div>
      <textarea
        aria-busy="true"
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative types_textarea_base input_itself_root_base input_itself_suffixed_base"
        id="id"
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and valid 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;
